--- a/src/cppmeta.tex
+++ b/src/cppmeta.tex
@@ -3,10 +3,16 @@
         \item Templates are used by the compiler to create temporary source code
             \cite{wikiTM}.
 
+        \vspace{5mm}
+
         \item This code is merge by the compiler with the rest of the source code
             and then compiled\cite{wikiTM}.
 
+        \vspace{5mm}
+
         \item Compile time execution\cite{wikiTM}.
+
+        \vspace{5mm}
 
         \item C++, D, Lisp(kind of)\cite{wikiTM}.
     \end{itemize}
@@ -40,18 +46,6 @@
     \begin{itemize}
         \item This is what has made template metaprogramming in C++ so popular
     \end{itemize}
-\end{frame}
-
-\begin{frame}{Type Computations}
-    \inputminted[mathescape,                                                       
-        linenos,                                                           
-        numbersep=5pt,                                                     
-        frame=lines,                                                       
-        bgcolor=White,                                                     
-        fontsize=\scriptsize,                                              
-        linenos,                                                           
-        framesep=1.5mm]{c++}                                                 
-        {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/minmetatype.cpp}
 \end{frame}
 
 \begin{frame}{Type Computations}
@@ -112,18 +106,6 @@
             };
         \end{tikzpicture}
     \end{center}
-\end{frame}
-
-\begin{frame}{Type Computations}
-    \inputminted[mathescape,                                                       
-        linenos,                                                           
-        numbersep=5pt,                                                     
-        frame=lines,                                                       
-        bgcolor=White,                                                     
-        fontsize=\scriptsize,                                              
-        linenos,                                                           
-        framesep=1.5mm]{c++}                                                 
-        {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/minmetatype_more.cpp}
 \end{frame}
 
 \begin{frame}{Type Computations}
