--- a/src/definitions.tex
+++ b/src/definitions.tex
@@ -1,7 +1,9 @@
 \begin{frame}{Definitions}
 \begin{itemize}
 \item Writing programs that generate or manipulate programs as their data.
+\vspace{5mm}
 \item A program that manipulates code.
+\vspace{5mm}
 \item Code-generating programs are sometimes called meta-programs; writing such programs
     is called meta-programming \cite{AbrahamsAndGurtovoy04}.
 \end{itemize}
