--- a/src/meta.tex
+++ b/src/meta.tex
@@ -60,7 +60,7 @@
 \setbeamertemplate{sidebar right}{}% or get rid of navigation entries there somehow from the default position... 
 %\setbeameroption{show notes on second screen}
 \newcommand{\captionfont}{\footnotesize}
-\title[Metaprogramming, an Introduction]
+\title[Metaprogramming]
 {Meta-programming, an Introduction}
 \author[Christian Lalanne \emph{et. al}] % (optional, use only with lots of authors)
 {\textcolor{CherryRed}{Christian Lalanne}}
@@ -76,13 +76,13 @@
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
-\date[August 18, 2014] % (optional, should be abbreviation of conference nam
-{Dublin\ August 18, 2014}
+\date[October 3, 2014] % (optional, should be abbreviation of conference nam
+{Dublin\ October 3, 2014}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
 %   yourself) who are reading the slides online
 
-\subject{Meta\-programming an introduction}
+\subject{Meta\-programming}
 % This is only inserted into the PDF information catalogue. Can be left
 % out. 
 
@@ -383,34 +383,18 @@
 \end{frame}
 \input{cppmeta}
 
-\section{Design Patterns}
-\begin{frame}<beamer>                                                                                                                    
-    \frametitle{Outline}
-    \tableofcontents[currentsection]
-\end{frame}
-\input{cppdesign}
-
 \section{Erasing virtual methods}
 \subsection{Virtual Tables}
 \input{vtbl}
-\subsection{naive}
-\input{naive}
 \subsection{crtp}
 \input{crtp}
 
-\section{Gilles example}
+\section{Motivation}
 \begin{frame}<beamer>                                                                                                                    
     \frametitle{Outline}
     \tableofcontents[currentsection]
 \end{frame}
-\input{gilles}
-
-\section{Expression Templates:}
-\begin{frame}<beamer>                                                                                                                    
-    \frametitle{Outline}
-    \tableofcontents[currentsection]
-\end{frame}
-\input{cppexp}
+\input{motivation}
 
 \section{References}
 \input{references}
