end of the talk

--- a/src/cppmeta.tex
+++ b/src/cppmeta.tex
@@ -1,6 +1,6 @@
 \begin{frame}{C++ Template Meta-programming}
     \begin{itemize}
-        \item Templates are used by the compiler to create temporary source code
+        \item Templates are used by the compiler to create source code
             \cite{wikiTM}.
 
         \vspace{5mm}
@@ -14,7 +14,7 @@
 
         \vspace{5mm}
 
-        \item C++, D, Lisp(kind of)\cite{wikiTM}.
+        \item C++, D, Curl, XL, Lisp(kind of)\cite{wikiTM}.
     \end{itemize}
 \end{frame}
 
