--- a/src/meta.tex
+++ b/src/meta.tex
@@ -61,7 +61,7 @@
 %\setbeameroption{show notes on second screen}
 \newcommand{\captionfont}{\footnotesize}
 \title[Metaprogramming]
-{Meta-programming, an Introduction}
+{Metaprogramming}
 \author[Christian Lalanne \emph{et. al}] % (optional, use only with lots of authors)
 {\textcolor{CherryRed}{Christian Lalanne}}
 % - Give the names in the same order as the appear in the paper.
@@ -376,7 +376,7 @@
 \end{frame}
 \input{macros}
 
-\section{C++ Template meta-programming}
+\section{C++ Template Metaprogramming}
 \begin{frame}<beamer>                                                                                                                    
     \frametitle{Outline}
     \tableofcontents[currentsection]
