--- a/src/definitions.tex
+++ b/src/definitions.tex
@@ -1,12 +1,40 @@
-\begin{frame}{Definitions}
-\begin{itemize}
-\item Writing programs that generate or manipulate programs as their data.
-\vspace{5mm}
-\item A program that manipulates code.
-\vspace{5mm}
-\item Code-generating programs are sometimes called meta-programs; writing such programs
-    is called meta-programming \cite{AbrahamsAndGurtovoy04}.
-\end{itemize}
+\begin{frame}{Definitions\cite{AbrahamsAndGurtovoy04}}
+    \begin{center}
+        \begin{tikzpicture}[]
+            \node[] at (0mm,0mm){
+                \includegraphics[height=60mm]{/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/mp.png}\hspace{5mm}
+            };
+        \end{tikzpicture}
+    \end{center}
 \end{frame}
 
+\begin{frame}{Definitions}
+    \begin{center}
+        \begin{tikzpicture}[]
+            \node[] at (0mm,0mm){
+                \includegraphics[height=60mm]{/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/mp1.png}\hspace{5mm}
+            };
+        \end{tikzpicture}
+    \end{center}
+\end{frame}
+
+\begin{frame}{Definitions}
+    \begin{center}
+        \begin{tikzpicture}[]
+            \node[] at (0mm,0mm){
+                \includegraphics[height=60mm]{/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/mp2.png}\hspace{5mm}
+            };
+        \end{tikzpicture}
+    \end{center}
+\end{frame}
+
+\begin{frame}{Definitions}
+    \begin{center}
+        \begin{tikzpicture}[]
+            \node[] at (0mm,0mm){
+                \includegraphics[height=60mm]{/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/mp3.png}\hspace{5mm}
+            };
+        \end{tikzpicture}
+    \end{center}
+\end{frame}
 
